--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,14 +1,36 @@
-<h1>Login</h1>
-<form method="post">
+
+{% extends 'core/base.html' %}
+{% load static %}
+{% block content %}
+<div class="stars">
+    <script>
+        for(let i = 0; i < 100; i++) {
+            let star = document.createElement("div");
+            star.className = "star";
+            star.style.top = `${Math.random() * 100}vh`;
+            star.style.left = `${Math.random() * 100}vw`;
+            document.querySelector(".stars").appendChild(star);
+        }
+    </script>
+</div>
+
+<div class="container mt-5">
+  <h1>Login</h1>
+  <form method="post">
     {% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" name="username" id="username" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" required>
-    <br>
-    <button type="submit">Login</button>
-</form>
-{% if error %}
-    <p style="color: red;">{{ error }}</p>
-{% endif %}
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" name="username" id="username" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" name="password" id="password" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  {% if error %}
+    <p class="text-danger mt-3">{{ error }}</p>
+  {% endif %}
+  <p class="mt-3">Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+</div>
+{% endblock %}
