--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -1,4 +1,3 @@
-
 {% extends 'core/base.html' %}
 {% load static %}
 {% block content %}
@@ -6,9 +5,20 @@
   <h2>Sign Up</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    
+    {% for field in form %}
+      <div class="mb-3">
+        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+        {{ field }}
+        {% for error in field.errors %}
+          <p class="text-danger custom-error">{{ error }}</p>
+        {% endfor %}
+      </div>
+    {% endfor %}
+
     <button type="submit" class="btn btn-primary">Sign Up</button>
   </form>
+
   <p class="mt-3">Already have an account? <a href="{% url 'login' %}">Log In</a></p>
 </div>
 {% endblock %}
